# python-scripts-utilities

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: codeql.yaml  tests.yaml
csv_converter/: csv_to_json.py
csv_converter/tests/: test_csv_to_json.py
utils/: timer.py
