[tool.poetry]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = ["tngeene <tngeene27@gmail.com>"]
readme = "README.md"
packages = [{include = "python_scripts"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pre-commit = "3.4.0"
ipython = "8.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
